changed from toList to  collect to list in processed ontology service impl